@@ -15,6 +15,7 @@ Version 1.3.5+svn:
   * Multiplayer
     * The random starting time of day setting is will now be remembered.
     * Fixed a bug which could lead to the map in the lobby to become invisible.
+    * Fixed an OOS which happened when a unit was recruited.	
 
   * Unit changes and balancing
 
